# iway-certbot-dns-auth

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
etc/: iway-certbot-dns-auth.yml
iway_certbot_dns_auth/: __init__.py  api.py  dns_challenge.py  hooks.py  utils.py
scripts/: iway-certbot-auth-hook
tests/: test_01_base.py
